force-app/main/default/objects/Connector__c/Connector__c.object-meta.xml
<CustomObject>
    <label>Connector</label>
    <nameField>
        <label>Connector Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Connectors</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>