force-app/main/default/objects/Connector__c/fields/AccessTokenExpiry__c.field-meta.xml
<CustomField>
    <fullName>AccessTokenExpiry__c</fullName>
    <label>Access Token Expiry</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>