force-app/main/default/objects/Connector__c/fields/AccessTokenRequested__c.field-meta.xml
<CustomField>
    <fullName>AccessTokenRequested__c</fullName>
    <label>Access Token Requested</label>
    <type>DateTime</type>
</CustomField>