force-app/main/default/objects/Connector__c/fields/ConnectorType__c.field-meta.xml
<CustomField>
    <fullName>ConnectorType__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Connector Type</label>
    <referenceTo>ConnectorType__c</referenceTo>
    <relationshipLabel>Connectors</relationshipLabel>
    <relationshipName>Connectors</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>