force-app/main/default/objects/Connector__c/fields/RefreshTokenRequested__c.field-meta.xml
<CustomField>
    <fullName>RefreshTokenRequested__c</fullName>
    <label>Refresh Token Requested</label>
    <type>DateTime</type>
</CustomField>